--- a/index1.html
+++ b/index1.html
@@ -70,7 +70,7 @@
 
 
     <!-- Features Section -->
-    <section class="features">
+    <section class="features" style="margin-right: 400px;">
         <div>
             <div style="display: flex;">
                 <div>
@@ -163,18 +163,18 @@
                     injected humour, or randomised...........</p>
             </div>
         </div>
-        <div style="display: flex;">
-            <div style="width: 200px;
+        <div style="display: flex; margin-left: 200px;">
+            <div>
+                <img src="images/architect.png" height="700px" alt="">
+            </div>
+            <div style="width: 180px;
                 height: 100px;
                 flex-shrink: 0;
                 border-radius: 8px;
                 background: #FF900E;
-                margin-left: 146px;">
-                <p style="text-align: center; color: white; font-size: 26px; padding: 15px;">10+Year</p>
-                <p style="text-align: center; color: white;">Experience</p>
-            </div>
-            <div style="">
-                <img src="images/architect.png" height="700px" alt="">
+                margin-top: 630px; margin-left: -590px;">
+                 <p style="text-align: center; color: white; font-size: 26px; padding: 15px;">10+Year</p>
+                 <p style="text-align: center; color: white;">Experience</p>
             </div>
         </div>
     </section>
